Renaming a file, Structuring the Index, Making the "next page" and "previous page" buttons work.

--- a/css/style.css
+++ b/css/style.css
@@ -347,3 +347,8 @@ td {
 .navigation-link.next {
     float: right;
 }
+
+.navigation-link:hover {
+    text-decoration: underline;
+    color: darkblue;
+}
