--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,15 @@ img {
     height: auto;
 }
 
+.img-downsized{
+    display: block;
+    width: auto;
+    max-width: 50%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .img-centered {
     display: block;
     margin-left: auto;
