Disabled Printing of "next page" and "previous page" buttons at bottom of webpages

--- a/css/style.css
+++ b/css/style.css
@@ -476,6 +476,10 @@ section:not(#content section) {
         display: none;
     }
 
+    .no-print-nav {
+        display: none !important;
+    }
+
     .tooltip {
         display: none !important;
     }
